feat: support configuring additional mapper types internally (#14202)
Co-authored-by: Chandler Prall <chandler.prall@gmail.com>